syntax = "proto3";

package pb;

option go_package = "github.com/PYTNAG/simpletodo/pb";

message CreateListRequest {
    int32 user_id = 1;
    string header = 2;
}